--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/styled-components": "^5.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^2.26.4",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "4.1.3"
